Redesign response headers